# Sky-Pro-2.0

./: .gitignore  pyproject.toml
src/: category.py  lawn_grass_product.py  main.py  product.py  smartphone_product.py  utils.py
tests/: conftest.py  test_category.py  test_lawn_grass_product.py  test_product.py  test_product_category.py  test_smartphone_product.py  test_utils.py  tests_test_classes.py
