[tool.poetry]
name = "skypro-2-0"
version = "0.1.0"
description = ""
authors = ["demarkiz <markberezhnoy27@gmail.com>"]
readme = "README.md"
packages = [{include = "skypro_2"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.3.2"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
